go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@example-external-test-unexported-access.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkPublicFunction",
        "uri": "go-runner/testdata/projects/example-external-test-unexported-access/main_test.go::BenchmarkPublicFunction",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkPublicFunctionMultiple",
        "uri": "go-runner/testdata/projects/example-external-test-unexported-access/main_test.go::BenchmarkPublicFunctionMultiple",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  },
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkSomething::test",
        "uri": "go-runner/testdata/projects/example-external-test-unexported-access/internal_test.go::BenchmarkSomething::test",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
