go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-testify.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkWithTestifySuite",
        "uri": "go-runner/testdata/projects/example-with-testify/metric/benchmark_test.go::BenchmarkWithTestifySuite",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
