go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-vendor.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkAddWithAssert",
        "uri": "go-runner/testdata/projects/example-with-vendor/main_test.go::BenchmarkAddWithAssert",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkLocalFib",
        "uri": "go-runner/testdata/projects/example-with-vendor/main_test.go::BenchmarkLocalFib",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
